1.实现用户模块，使用RBAC（用户-角色-权限）实现访问控制 2.提供用户注册、登录、登出、注销（软删）能力 3.使用 Sa-Token 替代 Spring Security，做到轻量、可控、易维护 4.提供了初始化的docker-compose配置文件